libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/use-tuple-path.jsonc
//@ run: fail
//@ description: any path that isn't an identifier should fail
[
  "::kernel::special_form::use",
  "::core",
  { "#tuple": ["::core::math::sub"] },
  //~^ ERROR expected a simple name to import
  { "#literal": 1 }
]
